--- a/requirements.txt
+++ b/requirements.txt
@@ -48,98 +48,98 @@ typing_extensions==4.10.0
 watchdog==4.0.0
 
 # extras
-# astor>=0.8.1
-# aws-secretsmanager-caching==1.1.1.5
-# boto3==1.26.60
-# botocore==1.29.60
-# clickhouse-connect~=0.6.23
-# db-dtypes==1.0.5
-# duckdb==0.9.2
-# google-api-core~=2.15.0
-# google-api-python-client~=2.70.0
-# google-cloud-bigquery~=3.14.1
-# google-cloud-iam~=2.13.0
-# google-cloud-pubsub~=2.19.0
-# google-cloud-run~=0.10.1
-# google-cloud-storage~=2.5.0
-# gspread==5.7.2
-# kubernetes>=28.1.0
-# langchain==0.1.6; python_version >= '3.8'
-# langchain_community<0.0.20
-# mysql-connector-python~=8.2.0
-# openai>=0.27.8, <1.0.0
-# opentelemetry-api==1.22.0
-# opentelemetry-exporter-prometheus==0.43b0
-# opentelemetry-instrumentation-tornado==0.43b0
-# opentelemetry-exporter-otlp==1.22.0
-# opentelemetry-instrumentation-sqlalchemy==0.43b0
-# oracledb==1.3.1
-# pinotdb==5.1.0
-# prometheus_client>=0.18.0
-# psycopg2==2.9.3
-# psycopg2-binary==2.9.3
-# pydruid==0.6.5
-# pyodbc==4.0.35
-# redshift-connector==2.0.915
-# lxml==4.9.4
-# snowflake-connector-python==3.5.0
-# sshtunnel==0.4.0
-# tables==3.7.0
-# trino~=0.326
+astor>=0.8.1
+aws-secretsmanager-caching==1.1.1.5
+boto3==1.26.60
+botocore==1.29.60
+clickhouse-connect~=0.6.23
+db-dtypes==1.0.5
+duckdb==0.9.2
+google-api-core~=2.15.0
+google-api-python-client~=2.70.0
+google-cloud-bigquery~=3.14.1
+google-cloud-iam~=2.13.0
+google-cloud-pubsub~=2.19.0
+google-cloud-run~=0.10.1
+google-cloud-storage~=2.5.0
+gspread==5.7.2
+kubernetes>=28.1.0
+langchain==0.1.6; python_version >= '3.8'
+langchain_community<0.0.20
+mysql-connector-python~=8.2.0
+openai>=0.27.8, <1.0.0
+opentelemetry-api==1.22.0
+opentelemetry-exporter-prometheus==0.43b0
+opentelemetry-instrumentation-tornado==0.43b0
+opentelemetry-exporter-otlp==1.22.0
+opentelemetry-instrumentation-sqlalchemy==0.43b0
+oracledb==1.3.1
+pinotdb==5.1.0
+prometheus_client>=0.18.0
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
+pydruid==0.6.5
+pyodbc==4.0.35
+redshift-connector==2.0.915
+lxml==4.9.4
+snowflake-connector-python==3.5.0
+sshtunnel==0.4.0
+tables==3.7.0
+trino~=0.326
 
-# # Azure
-# azure-eventhub==5.11.2
-# azure-identity==1.12.0
-# azure-keyvault-secrets==4.6.0
-# azure-keyvault-certificates==4.6.0
-# azure-mgmt-containerinstance==10.1.0
-# azure-storage-blob==12.14.1
+# Azure
+azure-eventhub==5.11.2
+azure-identity==1.12.0
+azure-keyvault-secrets==4.6.0
+azure-keyvault-certificates==4.6.0
+azure-mgmt-containerinstance==10.1.0
+azure-storage-blob==12.14.1
 
-# # Streaming
-# confluent-avro~=1.8.0
-# elasticsearch==8.9.0
-# influxdb_client==1.36.1
-# kafka-python==2.0.2
-# nats-py==2.6.0
-# nkeys~=0.1.0
-# opensearch-py==2.0.0
-# pika==1.3.1
-# pymongo==4.3.3
-# requests_aws4auth==1.1.2
-# stomp.py==8.1.0
+# Streaming
+confluent-avro~=1.8.0
+elasticsearch==8.9.0
+influxdb_client==1.36.1
+kafka-python==2.0.2
+nats-py==2.6.0
+nkeys~=0.1.0
+opensearch-py==2.0.0
+pika==1.3.1
+pymongo==4.3.3
+requests_aws4auth==1.1.2
+stomp.py==8.1.0
 
-# # DBT
-# dbt-bigquery==1.7.2
-# dbt-clickhouse==1.7.1
-# dbt-core==1.7.4
-# dbt-duckdb==1.7.0
-# dbt-postgres==1.7.4
-# dbt-redshift==1.7.1
-# dbt-snowflake==1.7.1
-# dbt-spark==1.7.1
-# dbt-sqlserver==1.3.1
-# dbt-trino==1.7.1
+# DBT
+dbt-bigquery==1.7.2
+dbt-clickhouse==1.7.1
+dbt-core==1.7.4
+dbt-duckdb==1.7.0
+dbt-postgres==1.7.4
+dbt-redshift==1.7.1
+dbt-snowflake==1.7.1
+dbt-spark==1.7.1
+dbt-sqlserver==1.3.1
+dbt-trino==1.7.1
 
-# attrs==17.4.0
-# backoff
-# clickhouse_sqlalchemy
-# deltalake==0.7.0
-# facebook_business==17.0.2
-# gnupg==2.3.1
-# google-analytics-data==0.14.2
-# google-cloud-bigquery-storage==2.16.2
-# httpx[http2]
-# pendulum==2.1.0
-# pymongo_schema==0.4.1
-# python-magic==0.4.27
-# redshift-connector~=2.0.915
-# requests_mock==1.10.0
-# simple_salesforce~=1.12.5
-# singer_sdk~=0.34.1
-# stripe==5.5.0
-# terminaltables==3.1.10
-# twitter-ads==11.0.0
-# tzlocal==4.2
-# xlsx2csv==0.8.1
-# xmltodict==0.13.0
-# zenpy==2.0.25
+attrs==17.4.0
+backoff
+clickhouse_sqlalchemy
+deltalake==0.7.0
+facebook_business==17.0.2
+gnupg==2.3.1
+google-analytics-data==0.14.2
+google-cloud-bigquery-storage==2.16.2
+httpx[http2]
+pendulum==2.1.0
+pymongo_schema==0.4.1
+python-magic==0.4.27
+redshift-connector~=2.0.915
+requests_mock==1.10.0
+simple_salesforce~=1.12.5
+singer_sdk~=0.34.1
+stripe==5.5.0
+terminaltables==3.1.10
+twitter-ads==11.0.0
+tzlocal==4.2
+xlsx2csv==0.8.1
+xmltodict==0.13.0
+zenpy==2.0.25
